# synapsia

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  synapsia.py
.github/workflows/: publish-to-pypi.yml
src/synapsia/: synapsia.py  synapsia_query.py
