[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapsia"
version = "0.1.0"
authors = [
  { name="Luis Pereida", email="luis.pereida@sysadminctl.services" },
]
description = "A command-line tool to create and query RAG knowledge bases using LlamaIndex and Ollama."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "llama-index",
    "llama-index-embeddings-ollama",
    "llama-index-llms-ollama",
]

[project.urls]
"Homepage" = "https://github.com/sysadminctl-services/synapsia"
"Bug Tracker" = "https://github.com/sysadminctl-services/synapsia/issues"

[project.scripts]
synapsia = "synapsia.synapsia:main"
synapsia-query = "synapsia.synapsia_query:main"