[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapsia"
version = "1.0.3"
authors = [
  { name="Luis Pereida", email="luis.pereida@sysadminctl.services" },
]
description = "A command-line tool to create and query RAG knowledge bases using LlamaIndex and Ollama."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

keywords = [
    "cli", "rag", "llm", "ollama", "llama-index", "embeddings", 
    "vector", "knowledge-base", "python", "ai"
]

dependencies = [
    "llama-index",
    "llama-index-embeddings-ollama",
    "llama-index-llms-ollama",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sysadminctl-services/synapsia"
Repository = "https://github.com/sysadminctl-services/synapsia"
"Bug Tracker" = "https://github.com/sysadminctl-services/synapsia/issues"

[project.scripts]
synapsia = "synapsia.synapsia:main"
synapsia-query = "synapsia.synapsia_query:main"

[tool.setuptools.packages.find]
where = ["src"]